--- a/styles/module.css
+++ b/styles/module.css
@@ -1,85 +1,82 @@
-:root{
-    --yourTurnPlayerColor: rgba(95, 158, 160, 1);
-    --yourTurnPlayerColorTransparent: rgba(95, 158, 160, .5);
+:root {
+  --yourTurnPlayerColor: rgba(95, 158, 160, 1);
+  --yourTurnPlayerColorTransparent: rgba(95, 158, 160, .5);
 }
 
 
-.yourTurnContainer{
-    position: relative;
-    margin-left: 100px;
-    margin-right: 100px;
-    width: 100%;
+.yourTurnContainer {
+  position: relative;
+  margin-left: 100px;
+  margin-right: 100px;
+  width: 100%;
 }
 
-.yourTurnBanner, .yourTurnBannerBackground {
-    position: absolute;
-    vertical-align: middle;
-    transition: height 5s;
+.yourTurnBanner,
+.yourTurnBannerBackground {
+  position: absolute;
+  vertical-align: middle;
+  transition: height 5s;
+  width: 100%;
+}
 
+.yourTurnBanner {
+  margin-left: 400px;
+  padding-right: 400px;
+  margin-top: 140px;
+  margin-bottom: 140px;
+  height: 105px;
+}
 
-    width: 100%;
-  }
-
-  .yourTurnBanner{
-    margin-left: 400px;
-    padding-right: 400px;
-    margin-top: 140px;
-    margin-bottom: 140px;
-    height: 105px;
-  }
-
-.yourTurnBannerBackground{
-
+.yourTurnBannerBackground {
   height: 120px;
-  top:  0px;
+  top: 0px;
   left: -400px;
-    background-color: var(--yourTurnPlayerColorTransparent);
-    background-blend-mode: soft-light;
-    background-repeat: repeat;
-    border-top: var(--yourTurnPlayerColor);
-    border-top-width: 5px;
-    border-top-style: solid;
-    border-bottom-width: 5px;
-    border-bottom: var(--yourTurnPlayerColor);
-    border-bottom-style: solid;
-    animation-name: backgroundColor;
-    animation-duration: 3s;
-    animation-fill-mode: forwards;
-    z-index: -1;
-  }
+  background-color: var(--yourTurnPlayerColorTransparent);
+  background-blend-mode: soft-light;
+  background-repeat: repeat;
+  border-top: var(--yourTurnPlayerColor);
+  border-top-width: 5px;
+  border-top-style: solid;
+  border-bottom-width: 5px;
+  border-bottom: var(--yourTurnPlayerColor);
+  border-bottom-style: solid;
+  animation-name: backgroundColor;
+  animation-duration: 3s;
+  animation-fill-mode: forwards;
+  z-index: -1;
+}
 
-  .yourTurnBannerBackground.removing{
-    animation-name: backgroundDisappear;
-    animation-duration: 3s;
-    animation-fill-mode: forwards;
-  }
+.yourTurnBannerBackground.removing {
+  animation-name: backgroundDisappear;
+  animation-duration: 3s;
+  animation-fill-mode: forwards;
+}
 
-  .yourTurnBanner.removing{
-    opacity: 1;
-    animation-name: fadeOut;
-    animation-duration: 3s;
-    animation-fill-mode: forwards;
-  }
+.yourTurnBanner.removing {
+  opacity: 1;
+  animation-name: fadeOut;
+  animation-duration: 3s;
+  animation-fill-mode: forwards;
+}
 
 .yourTurnImg {
-    position: absolute;
-    object-fit: scale-down;
-    border-width: 0px;
-    width: 1000px;
-    height: 1000px;
-    
-    z-index: 1000;
-    opacity: 0.001;
+  position: absolute;
+  object-fit: scale-down;
+  border-width: 0px;
+  width: 1000px;
+  height: 1000px;
+  z-index: 1000;
+  opacity: 0.001;
 }
 
-.yourTurnImg.adding{
+.yourTurnImg.adding {
   animation-name: imgSlideDown;
   animation-duration: 2s;
   animation-fill-mode: forwards;
   animation-timing-function: cubic-bezier(0.34, 1.56, 0.64, 1);
 }
 
-.yourTurnImg.removing{
+.yourTurnImg.removing {
   opacity: 1;
   width: 400px;
   height: 400px;
@@ -90,33 +87,34 @@
 }
 
 .yourTurnImg.silhoutte {
-    filter: contrast(0) saturate(2000%) brightness(00%) blur(1px) ;
+  filter: contrast(0) saturate(2000%) brightness(00%) blur(1px);
 }
 
-.yourTurnText, .yourTurnSubheading{
-    max-height: 100px;
-    color: lightgray;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-weight: bold;   
-    text-overflow: clip;
-    margin-bottom: auto; 
-    margin-top: auto;
-    text-shadow: 2px 2px 5px black;
+.yourTurnText,
+.yourTurnSubheading {
+  max-height: 100px;
+  color: lightgray;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-weight: bold;
+  text-overflow: clip;
+  margin-bottom: auto;
+  margin-top: auto;
+  text-shadow: 2px 2px 5px black;
 }
 
-.yourTurnText{
-    font-size: 48pt;
-    vertical-align: middle;
-    text-align: left; 
-    border-bottom-width: 0px;
-    border-bottom: var(--yourTurnPlayerColor);
-    border-bottom-style: solid;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
+.yourTurnText {
+  font-size: 48pt;
+  vertical-align: middle;
+  text-align: left;
+  border-bottom-width: 0px;
+  border-bottom: var(--yourTurnPlayerColor);
+  border-bottom-style: solid;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
-.yourTurnSubheading{
+.yourTurnSubheading {
   display: inline-flex;
   justify-content: space-evenly;
   font-size: 18pt;
@@ -126,7 +124,7 @@
   padding-right: 5px;
 }
 
-.yourTurnSubheading.last{
+.yourTurnSubheading.last {
   display: inline-flex;
   margin-right: 0px;
   border-right-width: 0px;
@@ -137,11 +135,11 @@
   white-space: nowrap;
 }
 
-.yourTurnSubheading.yourTurnImg{
+.yourTurnSubheading.yourTurnImg {
   position: relative;
   height: 100px;
   width: 100px;
-  border-width: 0px; 
+  border-width: 0px;
   bottom: 40px;
   opacity: 1;
   object-fit: scale-down;
@@ -149,101 +147,99 @@
   image-rendering: optimizeSpeed;
 }
 
-.yourTurnPreload, .yourTurnPreloadImg{
-    position: absolute;
-    left: 9999px;
-    width: 1000;
-    height: 1000;
-    min-width: 1000;
-    min-height: 1000;
+.yourTurnPreload,
+.yourTurnPreloadImg {
+  position: absolute;
+  left: 9999px;
+  width: 1000;
+  height: 1000;
+  min-width: 1000;
+  min-height: 1000;
 }
 
-  @keyframes imgSlideDown {
-      from
-      {
-        width: 800px;
-        height: 800px;
-        opacity: 0;
-      }
-
-      20%{
-        width: 1000px;
-        height: 1000px;
-        opacity: 0;
-      }
-
-
-
-      50%{
-          opacity: 1;
-      }
-
-      to{
-          width: 400px;
-          height: 400px;
-          opacity: 1;
-      }
+@keyframes imgSlideDown {
+  from {
+    width: 800px;
+    height: 800px;
+    opacity: 0;
   }
 
-  @keyframes backgroundColor {
-      from{
-          background-color: rgba(0, 0, 0, 0);
-          opacity: 1;
-          width: 0;
-          padding-right: 0px;
-      }
-
-      50%{
-        background-color: var(--yourTurnPlayerColorTransparent)
-      }
-
-      60%{
-        background-color: var(--yourTurnPlayerColor)
-      }
-
-      70%{
-        background-color: var(--yourTurnPlayerColorTransparent)
-      }
-
-      75%{
-        background-color: var(--yourTurnPlayerColor);
-      }
-
-      to{
-        background-color: var(--yourTurnPlayerColorTransparent);
-        opacity: 1;
-        width: 100%;
-        padding-right: 400px;
-      }
+  20% {
+    width: 1000px;
+    height: 1000px;
+    opacity: 0;
   }
 
-  @keyframes borderSlideDown {
-    
-    from{
-      border-bottom-width: 0px;
-    }
-    
-    to{
-      border-bottom-width: 5px;
-    }
+  50% {
+    opacity: 1;
   }
 
-  @keyframes backgroundDisappear{
-    from{
-      width: 100%;
-    }
+  to {
+    width: 400px;
+    height: 400px;
+    opacity: 1;
+  }
+}
 
-    to{
-      width: 0%;
-    }
+@keyframes backgroundColor {
+  from {
+    background-color: rgba(0, 0, 0, 0);
+    opacity: 1;
+    width: 0;
+    padding-right: 0px;
   }
 
-  @keyframes fadeOut{
-    from{
-      opacity: 1;
-    }
-    to{
-      opacity: 0;
-    }
+  50% {
+    background-color: var(--yourTurnPlayerColorTransparent)
   }
-  
+
+  60% {
+    background-color: var(--yourTurnPlayerColor)
+  }
+
+  70% {
+    background-color: var(--yourTurnPlayerColorTransparent)
+  }
+
+  75% {
+    background-color: var(--yourTurnPlayerColor);
+  }
+
+  to {
+    background-color: var(--yourTurnPlayerColorTransparent);
+    opacity: 1;
+    width: 100%;
+    padding-right: 400px;
+  }
+}
+
+@keyframes borderSlideDown {
+
+  from {
+    border-bottom-width: 0px;
+  }
+
+  to {
+    border-bottom-width: 5px;
+  }
+}
+
+@keyframes backgroundDisappear {
+  from {
+    width: 100%;
+  }
+
+  to {
+    width: 0%;
+  }
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
+  }
+}
