--- a/styles/module.css
+++ b/styles/module.css
@@ -147,14 +147,8 @@
   image-rendering: optimizeSpeed;
 }
 
-.yourTurnPreload,
-.yourTurnPreloadImg {
-  position: absolute;
-  left: 9999px;
-  width: 1000;
-  height: 1000;
-  min-width: 1000;
-  min-height: 1000;
+.yourTurnImg.token {
+  transform: scale(80%);
 }
 
 @keyframes imgSlideDown {
